NEW: + todo list added + application settings that stores windows location, size and width of the columns added + notify icon added + autocompletion added + 3 retries to download job in 'TRANSIENT_ERROR' state FIX: + job state refresh changed + filling listview with data does not make form 'blink'

--- a/BitsMonitor.csproj
+++ b/BitsMonitor.csproj
@@ -117,7 +117,11 @@
     <None Include="Resources\Add.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Resources\complete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="todo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
