FIX: + BitsManager and whole Bits connected code moved to separete library + additional project with unit tests for BITS wrapper created

--- a/BitsMonitor.csproj
+++ b/BitsMonitor.csproj
@@ -16,6 +16,7 @@
     
     
     
+    <ApplicationIcon>bitsManager.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,11 +66,23 @@
     <Compile Include="AddJob.Designer.cs">
       <DependentUpon>AddJob.cs</DependentUpon>
     </Compile>
+    <Compile Include="JobInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="JobInfo.Designer.cs">
+      <DependentUpon>JobInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="mListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="mListView.Designer.cs">
+      <DependentUpon>mListView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,8 +92,14 @@
     <EmbeddedResource Include="AddJob.resx">
       <DependentUpon>AddJob.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="JobInfo.resx">
+      <DependentUpon>JobInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="mListView.resx">
+      <DependentUpon>mListView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -119,6 +138,7 @@
     <None Include="Resources\complete.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bitsManager.ico" />
     <Content Include="todo.txt" />
   </ItemGroup>
   <ItemGroup>
