NEW: + auto restart button (state stored in configuration file FIX: + about dialog box: version is now properly displayed + AddJob now allows to create director with button click instead of context-menu only

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="ColumnsWidth" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="AutoRestartJobs" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
