--- a/app.config
+++ b/app.config
@@ -22,6 +22,9 @@
             <setting name="ColumnsWidth" serializeAs="String">
                 <value />
             </setting>
+            <setting name="AutoRestartJobs" serializeAs="String">
+                <value>False</value>
+            </setting>
         </BitsMonitor.Properties.Settings>
     </userSettings>
 </configuration>
