FIX: * AutoRun -> AutoStart

--- a/app.config
+++ b/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <userSettings>
         <BitsMonitor.Properties.Settings>
-            <setting name="AutoRunBitsJob" serializeAs="String">
+            <setting name="AutoStartBitsJob" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="WindowWidth" serializeAs="String">
