NEW: + shutdown windows after all downloads are complete + ability to make specified number of jobs active
FIX:
* bringing application to the front after clicking on balloon tooltip (when app was not minimized but hidden by other windows)
* exception when all list items (except the firs one) were nulls - that happend sometimes when app was long run and some jobs finished already

--- a/app.config
+++ b/app.config
@@ -25,6 +25,9 @@
             <setting name="AutoRestartJobs" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ActiveJobs" serializeAs="String">
+                <value />
+            </setting>
         </BitsMonitor.Properties.Settings>
     </userSettings>
 </configuration>
