NEW: + shutdown windows after all downloads are complete + ability to make specified number of jobs active
FIX:
* bringing application to the front after clicking on balloon tooltip (when app was not minimized but hidden by other windows)
* exception when all list items (except the firs one) were nulls - that happend sometimes when app was long run and some jobs finished already

--- a/BitsMonitor.csproj
+++ b/BitsMonitor.csproj
@@ -66,6 +66,7 @@
     <Compile Include="AddJob.Designer.cs">
       <DependentUpon>AddJob.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExitWindows.cs" />
     <Compile Include="JobInfo.cs">
       <SubType>Form</SubType>
     </Compile>
