--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="ActiveJobs" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MRUFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
