--- a/app.config
+++ b/app.config
@@ -28,6 +28,9 @@
             <setting name="ActiveJobs" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MRUFolder" serializeAs="String">
+                <value />
+            </setting>
         </BitsMonitor.Properties.Settings>
     </userSettings>
 </configuration>
