--- a/BitsMonitor.csproj
+++ b/BitsMonitor.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>BitsMonitor</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ApplicationIcon>bitsManager.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\BITSMonitor.ico</ApplicationIcon>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
@@ -180,7 +180,7 @@
     <None Include="Resources\complete.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bitsManager.ico" />
+    <Content Include="Resources\BITSMonitor.ico" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="BitsNet\BitsNet.csproj">
