FIX: new application icon added (icon created by me)

--- a/BitsMonitor.csproj
+++ b/BitsMonitor.csproj
@@ -205,7 +205,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Images\BITSMonitor.ico" />
+    <Content Include="Images\BITSMonitor.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
