--- a/BitsMonitor.csproj
+++ b/BitsMonitor.csproj
@@ -206,6 +206,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\BITSMonitor.ico" />
+    <Content Include="Images\BITSMonitor64.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
