FIX: pre-build task for T4 processing

--- a/BitsMonitor.csproj
+++ b/BitsMonitor.csproj
@@ -221,6 +221,10 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>cd "$(ProjectDir)"
+"c:\Program Files\Common Files\microsoft shared\TextTemplating\10.0\TextTransform.exe" -out ProjectVersion.cs ProjectVersion.tt</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
